--- a/index.html
+++ b/index.html
@@ -21,14 +21,17 @@
   </nav>
 
   <!-- Hero Section -->
-  <section class="relative bg-blue-700 text-white py-20 px-6 text-center">
-    <div class="absolute inset-0 bg-cover bg-center opacity-30" style="background-image: url('assets/img1.jpg');"></div>
-    <div class="relative z-10">
-      <h1 class="text-4xl md:text-5xl font-bold leading-tight mb-4">Bangun Website Impian Anda Bersama Mufasite</h1>
-      <p class="text-lg md:text-xl mb-6">Layanan pembuatan website profesional untuk kebutuhan bisnis, portofolio, atau pribadi Anda.</p>
-      <a href="#contact" class="bg-yellow-500 text-blue-800 py-3 px-6 rounded-full font-semibold hover:bg-yellow-400 transition">Hubungi Kami</a>
+  <section class="relative bg-gradient-to-r from-blue-800 via-blue-600 to-blue-500 text-white py-32 px-8 text-center flex items-center justify-center h-screen">
+    <div class="absolute inset-0 bg-cover bg-center opacity-50" style="background-image: url('assets/img1.jpg');"></div>
+    <div class="relative z-10 space-y-6 max-w-2xl">
+        <h1 class="text-4xl sm:text-5xl font-extrabold tracking-tight leading-tight text-shadow-md">Bangun Website Impian Anda Bersama Mufasite</h1>
+        <p class="text-lg sm:text-xl opacity-90 mb-8">Layanan pembuatan website profesional untuk bisnis, portofolio, atau pribadi Anda. Kami hadir untuk mewujudkan ide Anda menjadi kenyataan digital.</p>
+        <a href="#contact" class="bg-yellow-500 text-blue-800 py-4 px-8 rounded-full font-semibold text-lg transition-all hover:bg-yellow-400 hover:scale-105 transform shadow-xl duration-300">
+            Hubungi Kami
+        </a>
     </div>
-  </section>
+</section>
+
 
   <section id="service" class="relative w-full h-auto bg-white halamanEmpat">
     <section class="containerr mx-auto px-4 py-8 bg-transparent w-[90vw]  ">
