--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-gray-50 font-sans antialiased">
   <!-- Navbar -->
-  <nav class="bg-blue-600 p-4">
+  <nav class="fixed bg-blue-600 p-4 z-50 w-full">
     <div class="max-w-7xl mx-auto flex justify-between items-center">
       <a href="#" class="text-white text-2xl font-bold">Mufasite</a>
       <div class="space-x-6">
@@ -23,19 +23,20 @@
   <!-- Hero Section -->
   <section class="relative bg-gradient-to-r from-blue-800 via-blue-600 to-blue-500 text-white py-32 px-8 text-center flex items-center justify-center h-screen">
     <div class="absolute inset-0 bg-cover bg-center opacity-50" style="background-image: url('assets/img1.jpg');"></div>
-    <div class="relative z-10 space-y-6 max-w-2xl">
+    <div class="relative z-10 space-y-6 max-w-3xl">
         <h1 class="text-4xl sm:text-5xl font-extrabold tracking-tight leading-tight text-shadow-md">Bangun Website Impian Anda Bersama Mufasite</h1>
         <p class="text-lg sm:text-xl opacity-90 mb-8">Layanan pembuatan website profesional untuk bisnis, portofolio, atau pribadi Anda. Kami hadir untuk mewujudkan ide Anda menjadi kenyataan digital.</p>
-        <a href="#contact" class="bg-yellow-500 text-blue-800 py-4 px-8 rounded-full font-semibold text-lg transition-all hover:bg-yellow-400 hover:scale-105 transform shadow-xl duration-300">
+        <a href="#contact" class="bg-yellow-500 text-blue-800 py-4 px-8 rounded-full font-semibold text-lg transition-all hover:bg-yellow-400 hover:scale-105 transform shadow-xl duration-300 mt-4">
             Hubungi Kami
         </a>
     </div>
 </section>
 
 
+
   <section id="service" class="relative w-full h-auto bg-white halamanEmpat">
     <section class="containerr mx-auto px-4 py-8 bg-transparent w-[90vw]  ">
-      <h1 class="text-2xl text-white font-bold text-center mb-8 mt-8 ">Our Services</h1>
+      <h1 class="text-2xl text-gray-800 font-bold text-center mb-8 mt-8 ">Our Services</h1>
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-9 ">
 
         <div data-aos="fade-up" data-aos-duration="4000"
